--- a/pom.xml
+++ b/pom.xml
@@ -67,16 +67,16 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
-        <maven.jar.plugin.version>3.2.0</maven.jar.plugin.version>
-        <maven.war.plugin.version>3.2.3</maven.war.plugin.version>
+        <maven.compiler.plugin.version>3.10.0</maven.compiler.plugin.version>
+        <maven.jar.plugin.version>3.2.2</maven.jar.plugin.version>
+        <maven.war.plugin.version>3.3.2</maven.war.plugin.version>
         <maven.clean.plugin.version>3.1.0</maven.clean.plugin.version>
         <maven.source.plugin.version>3.2.1</maven.source.plugin.version>
-        <maven.javadoc.plugin.version>3.2.0</maven.javadoc.plugin.version>
-        <maven.surefire.plugin.version>3.0.0-M4</maven.surefire.plugin.version>
-        <formatter.maven.plugin.version>2.11.0</formatter.maven.plugin.version>
+        <maven.javadoc.plugin.version>3.3.2</maven.javadoc.plugin.version>
+        <maven.surefire.plugin.version>3.0.0-M5</maven.surefire.plugin.version>
+        <formatter.maven.plugin.version>2.17.1</formatter.maven.plugin.version>
         <nexus.staging.maven.plugin.version>1.6.8</nexus.staging.maven.plugin.version>
-        <maven.gpg.plugin.version>1.6</maven.gpg.plugin.version>
+        <maven.gpg.plugin.version>3.0.1</maven.gpg.plugin.version>
         <jetty.version>9.4.19.v20190610</jetty.version>
         <servlet.api.version>3.1.0</servlet.api.version>
         <commons.vfs2.version>2.6.0</commons.vfs2.version>
@@ -88,9 +88,9 @@
         <commons.vfs2.cifs.version>1.2.0</commons.vfs2.cifs.version>
         <jcifs.version>1.3.18.3</jcifs.version>
         <logback.version>1.2.3</logback.version>
-        <junit.jupiter.engine.version>5.6.2</junit.jupiter.engine.version>
-        <mockito.version>3.3.3</mockito.version>
-        <spring.test.version>5.2.6.RELEASE</spring.test.version>
+        <junit.jupiter.engine.version>5.8.2</junit.jupiter.engine.version>
+        <mockito.version>4.3.1</mockito.version>
+        <spring.test.version>5.3.16</spring.test.version>
     </properties>
 
     <dependencies>
