--- a/pom.xml
+++ b/pom.xml
@@ -77,17 +77,17 @@
         <formatter.maven.plugin.version>2.17.1</formatter.maven.plugin.version>
         <nexus.staging.maven.plugin.version>1.6.8</nexus.staging.maven.plugin.version>
         <maven.gpg.plugin.version>3.0.1</maven.gpg.plugin.version>
-        <jetty.version>9.4.19.v20190610</jetty.version>
+        <jetty.version>9.4.45.v20220203</jetty.version>
         <servlet.api.version>3.1.0</servlet.api.version>
-        <commons.vfs2.version>2.6.0</commons.vfs2.version>
-        <jackrabbit.webdav.version>2.21.0</jackrabbit.webdav.version>
-        <commons.vfs2.jackrabbit2.version>2.6.0</commons.vfs2.jackrabbit2.version>
+        <commons.vfs2.version>2.9.0</commons.vfs2.version>
+        <jackrabbit.webdav.version>2.21.10</jackrabbit.webdav.version>
+        <commons.vfs2.jackrabbit2.version>2.9.0</commons.vfs2.jackrabbit2.version>
         <httpclient.version>4.5.13</httpclient.version>
-        <commons.net.version>3.6</commons.net.version>
+        <commons.net.version>3.8.0</commons.net.version>
         <jsch.version>0.1.55</jsch.version>
         <commons.vfs2.cifs.version>1.2.0</commons.vfs2.cifs.version>
         <jcifs.version>1.3.18.3</jcifs.version>
-        <logback.version>1.2.3</logback.version>
+        <logback.version>1.2.10</logback.version>
         <junit.jupiter.engine.version>5.8.2</junit.jupiter.engine.version>
         <mockito.version>4.3.1</mockito.version>
         <spring.test.version>5.3.16</spring.test.version>
@@ -120,6 +120,12 @@
             <groupId>org.apache.jackrabbit</groupId>
             <artifactId>jackrabbit-webdav</artifactId>
             <version>${jackrabbit.webdav.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>jcl-over-slf4j</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
